--- a/Getinvolved.html
+++ b/Getinvolved.html
@@ -3,8 +3,8 @@
 <head>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="cssgetinvolved.css">
-  <script src="getinvolved_java.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src=jquery-3.3.1.min.js"></script>
+  <script src="getinvolved/java.js"></script>
   <title>Get Involved</title>
 </head>
 
@@ -30,6 +30,7 @@
     </header>
   </div>
 
+<div class="content">
   <div>
     <h1 class="title"><b>Get Involved NOW</b></h1>
     <h2 class="subtitle">Find out how you can get involved in and outside of St Andrews!</h2>
@@ -83,7 +84,7 @@
       </div>
     </div>
   </div>
-
+</div>
   <div class="container-fluid2">
     <div class="row">
       <div class="col-sm-8">
@@ -105,4 +106,5 @@
         <img class="img-responsive" src='logo.jpeg'>
       </div>
     </div>
+
 </body>
