--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="csshomepage.css">
+  <script src=jquery-3.3.1.min.js"></script>
+  <script src="scripts/homepage.js"></script>
 </head>
 
 <body>
