--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="csshomepage.css">
-  <script src=jquery-3.3.1.min.js"></script>
-  <script src="scripts/homepage.js"></script>
+
+
 </head>
 
 <body>
@@ -94,16 +94,9 @@
 $("btn-vote").on("click"), function() {
   alert("Thank you for voting! Currently 45% have voted for Michelle Obama and 55% have voted for Malala Yousafzai.")
 });
-    </script>
+
+
+
+
+<script src="homepage.js"></script>
 </body>
-
-
-<!--... <div class="contact">
-    <h1>Contact Us</h1>
-    <p class="contactp">Email us at <b><span class="pinktext">thefemmefiles@gmail.com</span></b></p>
-    <h1>Follow Us</h1>
-    <p class="contactp">instagram, twitter, FB</p>
-    <h1>Subscribe to our newsletter!</h1>
-    <input type="email" placeholder="Your Email">
-    <input type="Submit">
-  </div> -->
