--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </p>
     <h4 class="polltext"><b>Who should our next week's WoW be?</b></h4>
     <ul>
-      <li class="vote"><button class="btn-md btn-vote">Michelle Obama</button></li>
+      <li class="vote"><button class="btn-md btn-vote" onclick="myFunction()">Michelle Obama</button></li>
       <li class="vote"><button class="btn-md btn-vote">Malala Yousafzai</button></li>
     </ul>
   </div>
@@ -97,14 +97,3 @@
       });
   </script>
 </body>
-
-
-<!--... <div class="contact">
-    <h1>Contact Us</h1>
-    <p class="contactp">Email us at <b><span class="pinktext">thefemmefiles@gmail.com</span></b></p>
-    <h1>Follow Us</h1>
-    <p class="contactp">instagram, twitter, FB</p>
-    <h1>Subscribe to our newsletter!</h1>
-    <input type="email" placeholder="Your Email">
-    <input type="Submit">
-  </div> -->
