links to twitter

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <input type="Submit">
         <h1>Follow us on:</h1>
         <div id='social-buttons'>
-          <button class="btn btn-md btn-twitter"><b>Twitter</b></button>
-          <button class="btn btn-md btn-facebook"><b>Facebook</b></button>
-          <button class="btn btn-md btn-pinterest"><b>Pinterest</b></button>
+          <button class="btn btn-md btn-twitter"><b><a href="https://twitter.com">Twitter</a></b></button>
+          <button class="btn btn-md btn-facebook"><b><a href="https://www.facebook.com">Facebook</a></b></button>
+          <button class="btn btn-md btn-pinterest"><b><a href="https://www.pinterest.co.uk">Pinterest</a></b></button>
         </div>
       </div>
       <div class="col-sm-4">
